[package]
edition = "2018"
name = "lodestone"
version = "0.5.0"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]
description = "A website wrapper for FFXIV's lodestone."
documentation = "https://docs.rs/lodestone"
repository = "https://github.com/Roughsketch/lodestone"
readme = "README.md"
keywords = ["lodestone", "ffxiv"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
failure = "0.1.8"
lazy_static = "1.4.0"
reqwest = {version = "0.11.4", default-features = false}
select = "0.5.0"

[dev-dependencies]
tokio = {version = "1.10.0", features = ["rt-multi-thread", "macros"]}


[features]
blocking = ["reqwest/blocking"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
default = ["rustls"]