[package]
edition = "2021"
name = "lodestone"
version = "0.5.0"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]
description = "A website wrapper for FFXIV's lodestone."
documentation = "https://docs.rs/lodestone"
repository = "https://github.com/Roughsketch/lodestone"
readme = "README.md"
keywords = ["lodestone", "ffxiv"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
reqwest = {version = "0.11.11", default-features = false}
select = "0.6.0"
thiserror = "1.0.31"

[dev-dependencies]
tokio = {version = "1.21.0", features = ["rt-multi-thread", "macros"]}
rand = "0.8.5"

[features]
blocking = ["reqwest/blocking"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
default = ["rustls-tls"]